--- a/package.json
+++ b/package.json
@@ -49,10 +49,12 @@
     "next": "^15.2.4",
     "next-themes": "^0.4.4",
     "postgres": "^3.4.7",
+    "prose": "^0.0.1",
     "react": "^19.1.0",
     "react-day-picker": "8.10.1",
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.54.1",
+    "react-markdown": "^10.1.0",
     "react-resizable-panels": "^2.1.7",
     "recharts": "2.15.0",
     "sonner": "^1.7.1",
