--- a/package.json
+++ b/package.json
@@ -46,13 +46,12 @@
     "embla-carousel-react": "8.5.1",
     "input-otp": "1.4.1",
     "lucide-react": "^0.454.0",
-    "next": "^15.2.4",
+    "next": "^15.5.9",
     "next-themes": "^0.4.4",
     "openai": "^5.16.0",
     "postgres": "^3.4.7",
-    "prose": "^0.0.1",
     "react": "^19.1.0",
-    "react-day-picker": "8.10.1",
+    "react-day-picker": "^9.13.0",
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.54.1",
     "react-markdown": "^10.1.0",
@@ -61,7 +60,7 @@
     "sonner": "^1.7.1",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
-    "vaul": "^0.9.6",
+    "vaul": "^1.1.2",
     "zod": "^3.24.1"
   },
   "devDependencies": {
